5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4178/executions/1807_2564.log
== TEST (2019-06-13 08:28:15) 
-- CODE:
from numpy import*

vet = array(eval(input("Gols primeiro time: ")))
vet2 = array(eval(input("Gols segundo time: ")))
vet3 = zeros(3,dtype=int)

for i in range(size(vet)):
	if vet[i] > vet2[i]:
		vet3 = vet3[0] + 1
	elif vet[i] == vet2[i]:
		vet3 = vet3[1] + 1
	elif vet[i]< vet2[i]:
		vet3 = vet3[2] + 1
print(vet3)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:29:34) 
-- CODE:
from numpy import*

vet = array(eval(input("Gols primeiro time: ")))
vet2 = array(eval(input("Gols segundo time: ")))
vet3 = zeros(3,dtype=int)

for i in range(size(vet)):
	if vet[i] > vet2[i]:
		r = vet3[0] + 1
	elif vet[i] == vet2[i]:
		r = vet3[1] + 1
	elif vet[i]< vet2[i]:
		r = vet3[2] + 1
print(r)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:30:22) 
-- CODE:
from numpy import*

vet = array(eval(input("Gols primeiro time: ")))
vet2 = array(eval(input("Gols segundo time: ")))
vet3 = zeros(3,dtype=int)

for i in range(size(vet)):
	if vet[i] > vet2[i]:
		r = vet3[0] + 1
	elif vet[i] == vet2[i]:
		r = vet3[1] + 1
	elif vet[i]< vet2[i]:
		r = vet3[2] + 1
print(vet3)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:31:25) 
-- CODE:
from numpy import*

vet = array(eval(input("Gols primeiro time: ")))
vet2 = array(eval(input("Gols segundo time: ")))
vet3 = zeros(3,dtype=int)

for i in range(size(vet)):
	if vet[i] > vet2[i]:
		vet3 = vet3[0] + 1
	elif vet[i] == vet2[i]:
		vet3 = vet3[1] + 1
	elif vet[i]< vet2[i]:
		vet3 = vet3[2] + 1
print(vet3)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:34:30) 
-- CODE:
from numpy import*

vet = array(eval(input("Gols primeiro time: ")))
vet2 = array(eval(input("Gols segundo time: ")))
vet3 = zeros(3,dtype=int)

for i in range(size(vet)):
	if vet[i] > vet2[i]:
		vet3 = vet3[0] + 1
	elif vet[i] = vet2[i]:
		vet3 = vet3[1] + 1
	elif vet[i]< vet2[i]:
		vet3 = vet3[2] + 1
print(vet3)
	
-- ERROR:
File "XXXX", line 10
    elif vet[i] = vet2[i]:
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:34:42) 
-- CODE:
from numpy import*

vet = array(eval(input("Gols primeiro time: ")))
vet2 = array(eval(input("Gols segundo time: ")))
vet3 = zeros(3,dtype=int)

for i in range(size(vet)):
	if vet[i] > vet2[i]:
		vet3 = vet3[0] + 1
	elif vet[i] == vet2[i]:
		vet3 = vet3[1] + 1
	elif vet[i]< vet2[i]:
		vet3 = vet3[2] + 1
print(vet3)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 08:59:12) 
-- CODE:
from numpy import*

vet = array(eval(input("Gols primeiro time: ")))
vet2 = array(eval(input("Gols segundo time: ")))
vet3 = zeros(3,dtype=int)

for i in range(size(vet)):
	if vet[i] > vet2[i]:
		vet3[0] = vet3[0] + 1
	elif vet[i] == vet2[i]:
		vet3[1] = vet3[1] + 1
	elif vet[i]< vet2[i]:
		vet3[2] = vet3[2] + 1
print(vet3)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 09:02:52) 
-- CODE:
from numpy import*

vet = array(eval(input("Gols primeiro time: ")))
vet2 = array(eval(input("Gols segundo time: ")))
vet3 = zeros(3,dtype=int)

for i in range(size(vet)):
	if vet[i] > vet2[i]:
		vet3[0] = vet3[0] + 1
	elif vet[i] == vet2[i]:
		vet3[1] = vet3[1] + 1
	elif vet[i]< vet2[i]:
		vet3[2] = vet3[2] + 1
print(vet3)
	
-- EXECUTION TIME:
1.0708
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
